--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,33 @@
-html, body{
+html, body {
+  display: flex;
   height: 100%;
   margin: 0;
   padding: 0;
 }
 
-#mapHolder{
-  height: 80vh;
+#mapHolder {
+  height: 100vh;
+  width: 80vw;
 }
 
-#map{
+#map {
   height: 100%;
-  width: auto;
 }
 
-#locate{
+#search{
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  float: right;
+  justify-content: center;
+  width: 20vw;
+}
+
+.seachTab{
+  display: inline;
+}
+
+.locateBtn {
   height: 100px;
   width: 100px;
 }
