--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,16 @@
 html, body {
   display: flex;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.4em;
   height: 100%;
   margin: 0;
   padding: 0;
+}
+
+.centered {
+  left: 50%;
+  position: absolute;
+  transform: translateX(-50%);
 }
 
 #mapHolder {
@@ -14,20 +22,43 @@ html, body {
   height: 100%;
 }
 
-#search{
+#overlay {
   align-items: center;
+  background-color: rgba(0, 0, 0, 0.9);
+  /* Black w/opacity */
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  left: 0;
+  overflow: hidden;
+  /* Disable horizontal scroll */
+  position: fixed;
+  text-align: center;
+  top: 0;
+  transition: 0.5s;
+  width: 100%;
+  z-index: 1;
+}
+
+#overlayContent {
+  color: white;
   display: flex;
   flex-direction: column;
-  float: right;
-  justify-content: center;
-  width: 20vw;
 }
 
-.seachTab{
-  display: inline;
+#overlay h1 {
+  top: 5%;
 }
 
-.locateBtn {
-  height: 100px;
-  width: 100px;
+#closeOverlayBtn {
+  bottom: 5%;
 }
+
+#closeOverlayBtn:hover {
+  cursor: pointer;
+}
+
+#searchTab {
+  margin-top: 50px;
+}
+
