--- a/css/style.css
+++ b/css/style.css
@@ -64,8 +64,8 @@ html, body {
   margin-top: 50px;
 }
 
-/* ---------------------Results Styling--------------------- */
-#results{
+/* ---------------------Search Styling--------------------- */
+#search{
   color: #212529;
   text-align: center;
   width: 20vw;
@@ -77,9 +77,10 @@ html, body {
 
 #criteria{
   list-style: none;
+  margin: 0px 25px 0px;
 }
 
-#criteria input, select, label{
+#criteria input, select{
   margin-left: 10px;
   margin-bottom: 10px;
 }
@@ -88,4 +89,20 @@ html, body {
   display: flex;
   font-size: .5em;
   margin-bottom: 10px;
+}
+
+/* ---------------------Results Styling--------------------- */
+#results{
+  background-color: rgba(0, 0, 0);
+  color: white;
+  height: 100%;
+  overflow: hidden;
+  /* Disable horizontal scroll */
+  position: fixed;
+  right: 0;
+  text-align: center;
+  top: 0;
+  transition: 0.5s;
+  width: 0%;
+  z-index: 1;
 }
